<resources>
    <string name="app_name">PetsCM</string>
    <string name="sign_in_with_phone">Entrar com Telemóvel</string>
    <string name="sign_in_with_google">Entrar com Google</string>
    <string name="register_text">Registar</string>
    <string name="first_name">Primeiro Nome</string>
    <string name="last_name">Apelido</string>
    <string name="phone_number">Número</string>
    <string name="continue_text">Continuar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="petwalk">PETWALK</string>
    <string name="adicionar_pet">Adicionar PET</string>
    <string name="nome">Nome</string>
    <string name="tipo">Tipo</string>
    <string name="user1">user1</string>
    <string name="a_walk_for_a_healthy_pet">A walk for a healthy PET</string>
    <string name="os_seus_pets">Os seus PETS</string>
    <string name="os_seus_passeios">Os seus passeios</string>
    <string name="passeador1">passeador1</string>
    <string name="sexo">Sexo</string>
    <string name="porte">Porte</string>
    <string name="idade">Idade</string>
    <string name="escolha_o_passeador">Escolha o passeador</string>
    <string name="começar_passeio">Começar Passeio</string>
    <string name="menu_meusPasseios">Meus passeios</string>
    <string-array name="attributes_tipo">
        <item>Cão</item>
        <item>Gato</item>
        <item>Outro</item>
    </string-array>
    <string-array name="attributes_sexo">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string-array name="attributes_porte">
        <item>Pequeno</item>
        <item>Médio</item>
        <item>Grande</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>