<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF80">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:text="@string/petwalk"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/addpet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_24dp"
            android:layout_marginStart="@dimen/_124dp"
            android:layout_marginEnd="@dimen/_64dp"
            android:text="@string/adicionar_pet"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold">
        </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginVertical="@dimen/_24sp">

        <TextView
            android:id="@+id/nomePet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8dp"
            android:text="@string/nome"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold">
        </TextView>


        <EditText
            android:id="@+id/edit1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="text"
            android:onClick="clickbotao"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/_24sp">

            <TextView
                android:id="@+id/animal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8dp"
                android:text="@string/tipo"
                android:textSize="@dimen/_24sp"
                android:textStyle="bold">
            </TextView>

            <Spinner
                android:id="@+id/spinner_tipo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/_24sp">

            <TextView
                android:id="@+id/sexo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8dp"
                android:text="@string/sexo"
                android:textSize="@dimen/_24sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spinner_sexo"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/_24sp">

            <TextView
                android:id="@+id/porte"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8dp"
                android:text="@string/porte"
                android:textSize="@dimen/_24sp"
                android:textStyle="bold">
            </TextView>

            <Spinner
                android:id="@+id/spinner_porte"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/_24sp">

            <TextView
                android:id="@+id/idade"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8dp"
                android:text="@string/idade"
                android:textSize="@dimen/_24sp"
                android:textStyle="bold">
            </TextView>


            <EditText
                android:id="@+id/edit2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:inputType="number"
                android:onClick="clickbotao"
                />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topPanel"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonAddPage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_124dp"
            android:layout_marginBottom="@dimen/_64dp"
            android:text="@string/adicionar_pet"/>

        <Button
            android:id="@+id/buttonVoltarAtras2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_124dp"
            android:layout_marginBottom="@dimen/_8dp"
            android:text="Voltar Atrás" />
    </LinearLayout>


    <TextView
        android:id="@+id/utilizador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/_8dp"
        android:text="@string/user1"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/a_walk_for_a_healthy_pet"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"/>

</RelativeLayout>