<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbeb63">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:text="@string/petwalk"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            android:layout_marginStart="@dimen/_20dp"
            android:text="@string/os_seus_pets"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topPanel"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonAddPage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_124dp"
            android:layout_marginBottom="@dimen/_64dp"
            android:text="@string/adicionar_pet"/>


        <ImageView
            android:layout_width="294dp"
            android:layout_height="116dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/dog"></ImageView>

        <Button
            android:id="@+id/buttonVoltarAtras1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_64dp"
            android:layout_marginLeft="@dimen/_124dp"
            android:text="Voltar Atrás" />
    </LinearLayout>




    <TextView
        android:id="@+id/utilizador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/_8dp"
        android:text="@string/user1"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/topPanel">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/a_walk_for_a_healthy_pet"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"/>

</RelativeLayout>